-
Bug
-
Resolution: Fixed
-
P3
-
internal
-
generic
-
os_x
If we animate 3D primitives and don't use MSAA textures we are seeing artifacts. Attached image for the same.
We clear MSAA textures in setDeviceParametersFor3D() but we dont do the same for non-MSAA textures. Also we should not handle clearing of color attachments in setDeviceParametersFor3D() it should be taken care in clearRect()
We clear MSAA textures in setDeviceParametersFor3D() but we dont do the same for non-MSAA textures. Also we should not handle clearing of color attachments in setDeviceParametersFor3D() it should be taken care in clearRect()
- blocks
-
JDK-8302050 Common state management for 3D implementation
-
- Closed
-