8314401: Clear color attachment at appropriate stage